# Maria-Cacau-App

./: .envrc  .gitignore  .graphifyignore  CLAUDE.md  LICENSE  README.md  appcast.xml  build.sh  package.sh  pyproject.toml  requirements.txt
.ai/: architecture.md  conventions.md  development.md  google_sheets.md  overview.md  packaging.md
.ai/benchmark/: CBL.md  ferramentas_e_objetivos.md
.githooks/: pre-merge-commit
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
_main/: auxFrames.py  auxWidgets.py  guiConsulta.py  guiDados.py  guiEntregas.py  guiProdutos.py  guiValidacao.py  gui_PopUp.py  gui_main.py  main.py
graphify-out/: GRAPH_REPORT.md  graph.html  graph.json
maria_cacau/: __init__.py  __main__.py
maria_cacau/app/: __init__.py  auto_update.py  coordinator.py  handler.py  window.py
maria_cacau/assets/: strings.py
maria_cacau/assets/images/: logo-icone.icns
maria_cacau/backend/: README.md  _server.py
maria_cacau/backend/data_source/: __init__.py  _google_sheets.py  _normalizer.py  _protocol.py  _utils.py  _viewmodel.py  sheet_mapper.py
maria_cacau/backend/errors/: __init__.py  _errors.py  (+1 more)
maria_cacau/core/: __init__.py  analisePlan.py  bus.py  cadastro_analyse_handler.py  charts.py  errors.py  google_sheets_service.py  observability.py  services.py  session.py  sheets_manager.py
maria_cacau/design_system/: aux_frames.py  aux_widgets.py  constants.py  gui_popup.py
maria_cacau/features/: __init__.py
pocs/architecture/: overview.md  pre-study.md  self-study.md  session-context.md
pocs/backend/: ongoing-study.md  poc-studies.md  routes-design.md  shared-domain.md
pocs/design-system/: poc_date_picker.py
pocs/prototipacao/: OVERVIEW.md
pocs/sheets-analysis/: README.md  TASKS.md  cadastro_asis.md  column-mismatches.md  prompt_design_cadastro.md  prompt_design_estados.md
scripts/: build.bat  build.sh  hideFilesAtDesktop.py  package.bat  package.sh  update_appcast.py
(+263 files in other folders)
