[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "maria-cacau"
version = "5.0.0"
description = "Ferramenta de análise de pedidos Maria Cacau"
authors = [{name = "Gui Reis", email = "guisreis25@gmail.com"}]
dependencies = [
    "PyQt6",
    "pandas",
    "openpyxl",
]

[project.scripts]
maria-cacau = "maria_cacau.__main__:main"

[project.optional-dependencies]
build = ["nuitka"]

[tool.setuptools.packages.find]
where = ["."]
include = ["maria_cacau*"]
